# doc_classifier

./: README.md  TECHNICAL_GUIDE.md  __init__.py  classifier.py  config.py  documentClassificationDetector.py  exceptions.py  mip_label_cache.json  models.py  pyproject.toml  reconciler.py  requirements.txt  utils.py
doc_classifier/: classifier.py  documentClassificationDetector.py  pyproject.toml  utils.py
doc_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extractors/: __init__.py  base.py  image_ocr.py  office_metadata.py  office_watermark.py  pdf_metadata.py  pdf_watermark.py  registry.py
pipeline_output/: audit_log.json  classification_summary.csv  detailed_results.json
test_documents/: Internal.docx  Internal.pptx  Internal.xlsx  NoClassification.docx  NoClassification.pptx  NoClassification.xlsx  Restricted.docx  Restricted.pptx  Restricted.xlsx  Secret_Protected.docx  Secret_Protected.pptx  Secret_Protected.xlsx  Secret_UnProtected.pptx  Secret_UnProtected.xlsx  Secret_Unprotected.docx
