[project]
name = "doc-classifier"  # project name on GitHub / installer
version = "0.1.0"
description = "Auto-detect document classification levels from metadata, labels, and watermarks."
readme = "TECHNICAL_GUIDE.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "pikepdf",
    "pdfplumber",
    "pdf2image",
    "pytesseract",
    "Pillow",
    "lxml"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
